--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "firebase": "^9.9.3",
+    "sweetalert2": "^11.4.29",
     "vue": "^3.2.13",
     "vue-router": "^4.1.4"
   },
